crates/plotnik-tests/tests/04-emit/types/quantifiers/error_repetition_capture_hint_avoids_enclosing_capture.txt
Q = {
  (identifier) @items
  {
    (number) @x
  }*
}
------------------ DIAGNOSTICS -------------------
error: captures `@x` repeat with `*` but are not collected into a list
 --> query.ptk:3:3
  |
3 | /   {
4 | |     (number) @x
5 | |   }*
  | |____^
  |
help: collect one record per repetition in `@matches`
  |
3 |   {
4 |     (number) @x
5 ~   }* @matches
  |
help: append `@_` instead if the repeated result should be discarded
